--- a/blog/templates/blog/logout.html
+++ b/blog/templates/blog/logout.html
@@ -1,3 +1,10 @@
-<h2>Logged Out</h2>
-<p>You have been logged out.</p>
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <title>Logout</title>
+</head>
+<body>
+<h2>You have been logged out.</h2>
 <a href="{% url 'login' %}">Login again</a>
+</body>
+</html>
