--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -1,6 +1,15 @@
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <title>Profile</title>
+</head>
+<body>
 <h2>Profile</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Update Profile</button>
+<form method='post'>
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type='submit'>Update</button>
 </form>
+<a href="{% url 'logout' %}">Logout</a>
+</body>
+</html>
