--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -1,15 +1,10 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-</head>
-<body>
+﻿{% extends "blog/base.html" %}
+{% block title %}Login{% endblock %}
+{% block content %}
 <h2>Login</h2>
 <form method='post'>
   {% csrf_token %}
   {{ form.as_p }}
   <button type='submit'>Login</button>
 </form>
-<a href="{% url 'register' %}">Register</a>
-</body>
-</html>
+{% endblock %}
